--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="set">参数设置</string>
 
     <string name="typeorder">请输入订单号</string>
-    <string name="supplier">供方：</string>
+    <string name="supplier">供方</string>
     <string name="main_material">主要材料：</string>
     <string name="building">楼栋：</string>
 
