--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,11 +29,11 @@
 
     <string name="typeorder">请输入订单号</string>
     <string name="supplier">供方</string>
-    <string name="main_material">主要材料：</string>
-    <string name="building">楼栋：</string>
+    <string name="main_material">主要材料</string>
+    <string name="building">地址</string>
 
     <string name="supply">供方</string>
-    <string name="build">楼栋</string>
+    <string name="build">地址</string>
     <string name="order_no">订单号</string>
     <string name="contact">收货联系人</string>
     <string name="getter">领用商</string>
